fixed div overlap on small screen
removed min-h-full from game state components, added h-60 (for the small screen) to game-window class

--- a/src/global.css
+++ b/src/global.css
@@ -11,7 +11,7 @@
     @apply text-xl font-bold tracking-wide;
   }
   .game-window {
-    @apply row-span-6 flex justify-center md:border-4 md:border-black md:flex-grow md:h-96
+    @apply row-span-6 flex justify-center md:border-4 md:border-black md:flex-grow md:h-96 h-60
   }
   .game-window__border {
     @apply m-1 border-4 border-black h-4/6 mb-6 mt-12 mx-3 md:border-0 grid grid-rows-4
